# bw-flasher

./: .gitignore  CONTRIBUTING.md  LEGAL_DISCLAIMER.md  PRINCIPLES.md  README.md  flash_uart.py  flasher.py  keygen.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
bwflasher/: __init__.py  __main__.py  base_flasher.py  brightway_flasher.py  firmware_detector.py  flash_uart.py  gui.py  keygen.py  leqi_flasher.py  styles.py  updater.py  utils.py  version.py
bwpatcher/: __main__.py  core.py  core_es32.py  utils.py
bwpatcher/modules/: Mi4Pro2nd.py  Mi5.py  Mi5Max.py  Mi5Pro.py  __init__.py
resources/: app.icns
